tests/pass/use_array_len_basic.lum
use array
use io
nums = [1, 2, 3]
println(len(nums))
println(len("hello"))
