tests/fail/use_array_pop_empty.lum
use array
nums = []
pop(nums)
